<resources>
    <string name="app_name">Bio Products</string>
    //login
    <string name="app_name_title">Bio Products</string>
    <string name="login_subtitle">Let\'s join us and help local community!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_to_register">If You Don"t Have An Account! Click Here!</string>

    //register
    <string name="register_to_login">If You Have An Account! Click Here!</string>
    <string name="register">Register</string>
    <string name="radio_button_check_producer">Producer</string>
    <string name="radio_button_check_client">Client</string>
    <string name="email_empty">Enter an email</string>
    <string name="email_invalid">Email invalid</string>
    <string name="password_empty">Enter a password</string>
    <string name="password_length">Password length must have al least %d character!</string>
    <string name="password_upper_case">Password must have at least one uppercase character!</string>
    <string name="password_lower_case">Password must have at least one lowercase character!</string>
    <string name="password_digit_case">Password must have at least one digit character!</string>
    <string name="password_match">Passwords do not match</string>
    <string name="field_empty">Field empty</string>

    //Profile
    <string name="create_profile">Update Profile</string>
    <string name="full_name">Full Name</string>
    <string name="set_profile_image">Add a profile image</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="short_bio">Short Bio</string>
    <string name="image_profile">image for profile</string>
    <string name="product_type">Product Type</string>
    <string name="update">update</string>
    <string name="ok">OK</string>
    <string name="dismis">CANCEL</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="profile_set_phone">Enter number phone</string>
    <string name="profile_set_address">Enter address</string>
    <string name="profile_set_bio">Enter a short bio</string>
    <string name="profile_set_product_type">Enter a product type</string>
    <string name="vegetable_category">Vegetable</string>
    <string name="meat_category">meat</string>
    <string name="cheese_category">cheese</string>
    <string name="fruit_category">fruit</string>
    <string name="diverse_category">Diverse</string>
    <string name="my_profile_category">My Profile</string>


    //fragment name
    <string name="vegetable_fragment">VEGETABLE PRODUCTS</string>
    <string name="cheese_fragment">CHEESE PRODUCTS</string>
    <string name="meat_fragment">MEAT PRODUCTS</string>
    <string name="fruit_fragment">FRUIT PRODUCTS</string>
    <string name="diverse_fragment">DIVERSE PRODUCTS</string>
    <string name="my_profile_fragment">MY PROFILE</string>


    <string name="create_post">Create New Post</string>
    <string name="view_my_post">My Post</string>
    <string name="username">Username</string>
</resources>