<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorPrimaryDark"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/create_profile"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_profile_image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:contentDescription="@string/image_profile"
                app:srcCompat="@drawable/ic_person"
                tools:src="@drawable/ic_person" />

            <TextView
                android:id="@+id/tv_select_image_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/set_profile_image"
                android:textColor="@color/colorPrimaryDark" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/gradient" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_profile_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/tv_set_profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_full_name"
                android:textColorHint="@color/colorPrimary"
                android:inputType="text"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/gradient" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/tv_set_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_set_address"
                android:maxLines="3"
                android:textColorHint="@color/colorPrimary"
                android:inputType="text"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/gradient" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/layout_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    android:textColor="@color/colorPrimaryDark" />

                <EditText
                    android:id="@+id/tv_set_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/profile_set_phone"
                    android:textColorHint="@color/colorPrimary" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/gradient" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_call_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/layout_phone">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="10dp"
                    app:srcCompat="@drawable/ic_phone" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layout_short_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/short_bio"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/tv_set_bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="3"
                android:hint="@string/profile_set_bio"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/gradient" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_product_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_type"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@color/colorPrimaryDark" />

            <EditText
                android:id="@+id/tv_set_product_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_set_product_type"
                android:textColorHint="@color/colorPrimary"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/gradient" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="25dp"
            android:text="@string/update" />


    </LinearLayout>
</ScrollView>