<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/app_name_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
        android:textColor="@color/colorPrimary" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:fontFamily="@font/roboto"
        android:text="@string/login_subtitle"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        android:textColor="@color/colorPrimary" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_login_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="25dp"
        android:background="@color/white"
        android:hint="@string/email"
        android:textColorHint="@color/colorPrimary"
        app:helperTextTextColor="@color/colorPrimary"
        app:boxStrokeColor="@color/colorPrimary"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimary" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_login_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:hint="@string/password"
        android:textColorHint="@color/colorPrimary"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/colorPrimary"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:fontFamily="@font/roboto"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimary" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto"
        android:text="@string/login"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="25dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_login_to_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_to_register"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/roboto"
        android:layout_gravity="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:layout_marginTop="60dp"/>


</LinearLayout>